--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
     <header>
       <div class="container">
         <div class="row main-head">
-          <div class="col-lg-6 main-logo">
+          <div class="col-xs-6 main-logo">
             <div class="main-logo-border">
               <p>Smart</p>
             </div>
           </div>
-          <div class="col-lg-6 main-nav">
+          <div class="col-xs-6 main-nav">
             <a href="#" class="main-nav-bar">
               <div class="main-nav-btn">
                 <span></span>
@@ -48,7 +48,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-lg-4">
+          <div class="col-lg-4 col-lg-offset-0 col-md-4 col-md-offset-4 col-sm-8 col-sm-offset-2">
             <div class="main-form">
               <form action="#">
                 <p class="main-form-header"><span>Send</span> A Message</p>
@@ -72,7 +72,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-lg-3">
+          <div class="col-md-3 col-sm-6 col-xs-12">
             <div class="process-box box-tomi wow bounceInUp" data-wow-delay="0s">
               <i class="fa fa-magnet"></i>
               <h4>Koc Koi Tomi</h4>
@@ -80,7 +80,7 @@
               <button class="process-btn" data-toggle="modal" data-target="#modal-know"><span class="btn-plus"></span>Know More</button>
             </div>
           </div>
-          <div class="col-lg-3">
+          <div class="col-md-3 col-sm-6 col-xs-12">
             <div class="process-box box-koimona wow bounceInUp" data-wow-delay="0.5s">
               <i class="fa fa-bug"></i>
               <h4>Koimona Set</h4>
@@ -88,7 +88,7 @@
               <button class="process-btn" data-toggle="modal" data-target="#modal-know"><span class="btn-plus"></span>Know More</button>
             </div>
           </div>
-          <div class="col-lg-3">
+          <div class="col-md-3 col-sm-6 col-xs-12">
             <div class="process-box box-koire wow bounceInUp" data-wow-delay="1s">
               <i class="fa fa-cogs"></i>
               <h4>Setting Koire</h4>
@@ -96,7 +96,7 @@
               <button class="process-btn" data-toggle="modal" data-target="#modal-know"><span class="btn-plus"></span>Know More</button>
             </div>
           </div>
-          <div class="col-lg-3">
+          <div class="col-md-3 col-sm-6 col-xs-12">
             <div class="process-box box-lara wow bounceInUp" data-wow-delay="1.5s">
               <i class="fa fa-camera-retro"></i>
               <h4>Ko Image Lara</h4>
@@ -110,13 +110,13 @@
     <section id="works">
       <div class="container">
         <div class="row">
-          <div class="col-lg-12 section-header text-center">
+          <div class="col-xs-12 section-header text-center">
             <h2><span>Featured</span> Works</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit Maiores</p>
           </div>
         </div>
         <div class="row works-row">
-          <div class="col-lg-4">
+          <div class="col-md-4 col-sm-6 col-sx-12">
             <div class="works-box">
               <img src="img/works/work-1.jpg" alt="Описание">
               <div class="sugnature">
@@ -127,7 +127,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4">
+          <div class="col-md-4 col-sm-6 col-sx-12">
             <div class="works-box">
               <img src="img/works/work-2.jpg" alt="Описание">
               <div class="sugnature">
@@ -138,7 +138,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4">
+          <div class="col-md-4 col-sm-6 col-sx-12">
             <div class="works-box">
               <img src="img/works/work-3.jpg" alt="Описание">
               <div class="sugnature">
@@ -149,9 +149,7 @@
               </div>
             </div>
           </div>
-        </div> <!-- / row -->
-        <div class="row works-row">
-          <div class="col-lg-4">
+          <div class="col-md-4 col-sm-6 col-sx-12">
             <div class="works-box">
               <img src="img/works/work-4.jpg" alt="Описание">
               <div class="sugnature">
@@ -162,7 +160,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4">
+          <div class="col-md-4 col-sm-6 col-sx-12">
             <div class="works-box">
               <img src="img/works/work-5.jpg" alt="Описание">
               <div class="sugnature">
@@ -173,7 +171,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4">
+          <div class="col-md-4 col-sm-6 col-sx-12">
             <div class="works-box">
               <img src="img/works/work-6.jpg" alt="Описание">
               <div class="sugnature">
@@ -184,9 +182,7 @@
               </div>
             </div>
           </div>
-        </div> <!-- / row -->
-        <div class="row works-row">
-          <div class="col-lg-4">
+          <div class="col-md-4 col-sm-6 col-sx-12">
             <div class="works-box">
               <img src="img/works/work-7.jpg" alt="Описание">
               <div class="sugnature">
@@ -197,7 +193,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4">
+          <div class="col-md-4 col-sm-6 col-sx-12">
             <div class="works-box">
               <img src="img/works/work-8.jpg" alt="Описание">
               <div class="sugnature">
@@ -208,7 +204,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4">
+          <div class="col-md-4 col-sm-6 col-sx-12">
             <div class="works-box">
               <img src="img/works/work-9.jpg" alt="Описание">
               <div class="sugnature">
@@ -233,23 +229,23 @@
         </div>
 
         <div class="row">
-          <div class="col-lg-2">
+          <div class="col-lg-2 col-md-2 col-sx-12">
             <ul class="services-list" role="tablist">
               <li role="presentation" class="services-list-item"><a href="#app" aria-controls="app" role="tab" data-toggle="tab"><img src="img/services/1.png" alt="Статистика"></a></li>
               <li role="presentation" class="services-list-item"><a href="#web" aria-controls="web" role="tab" data-toggle="tab"><img src="img/services/2.png" alt="Настроки"></a></li>
               <li role="presentation" class="services-list-item"><a href="#global" aria-controls="global" role="tab" data-toggle="tab"><img src="img/services/3.png" alt="Поиск"></a></li>
             </ul>
           </div>
-          <div class="col-lg-10">
+          <div class="col-lg-10 col-md-10">
             <div class="services-info tab-content">
               <div id="app" role="tabpanel" class="row tab-pane fade in active">
-                <div class="col-lg-8">
+                <div class="col-lg-8 col-md-8">
                   <h4>Modern App Design</h4>
                   <span class="services-line"></span>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus earum totam ad sint error porro. Consectetur, sunt, aperiam. Magni rem optio distinctio illum consequuntur delectus nulla illo aperiam itaque cumque. <br><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel officia vitae eveniet quam rem unde facilis.</p>
                   <button class="services-btn"><span class="btn-plus"></span>Know More</button>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-4">
                   <img class="img-responsive" src="img/services/info-1.png" alt="">
                 </div>
               </div> <!-- //row -->
@@ -507,7 +503,28 @@
             arrows: true,
             prevArrow: '<i class="fa feedback-slider-arrows arrow-left fa-chevron-left"></i>',
             nextArrow: '<i class="fa feedback-slider-arrows arrow-right fa-chevron-right"></i>',
-            dots: true
+            dots: true,
+            responsive: [
+              {
+                breakpoint: 1024,
+                settings: {
+                  slidesToShow: 2,
+                  slidesToScroll: 2,
+                  infinite: true,
+                  dots: true
+                }
+              },
+              {
+                breakpoint: 600,
+                settings: {
+                  slidesToShow: 1,
+                  slidesToScroll: 1
+                }
+              }
+    // You can unslick at a given breakpoint now by adding:
+    // settings: "unslick"
+    // instead of a settings object
+  ]
 
         });
       });
